[Gradle] Add ability to run with different JDK versions.